# finsynth

./: .gitignore  .mise.toml  LICENSE  README.md  pyproject.toml
src/finsynth/: __init__.py  cli.py
src/finsynth/accounts/: __init__.py  factory.py  models.py
src/finsynth/categories/: __init__.py  generators.py
src/finsynth/engine/: __init__.py  config.py  income.py  simulation.py
src/finsynth/output/: __init__.py  serialisers.py
src/finsynth/transactions/: __init__.py  models.py
tests/: test_finsynth.py
